Task10/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 

spec:
  rules:
    - host: shebl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-svc
                port:
                  number: 8080
          - path: /argo
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
